--- a/CRUD/posts/templates/posts/list.html
+++ b/CRUD/posts/templates/posts/list.html
@@ -6,8 +6,9 @@
     <title>글 리스트</title>
 </head>
 <body>
+    <a href="{% url 'posts:create' %}">글 생성하기</a>
     {% for post in posts %}
-        <h2>제목: {{ post.title}} </h2>
+        <h2>제목: <a href="{% url 'posts:detail' post.id %}">{{ post.title}}</a> </h2>
         <h4>글쓴이: {{post.writer}}</h4>
         ##########################<br>
     {% endfor %}
